--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,17 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.+'
     }
 }
 
 allprojects {
-    group GROUP
-    version VERSION
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
