--- a/gradle.properties
+++ b/gradle.properties
@@ -16,23 +16,18 @@ android.enableJetifier=true
 android.useAndroidX=true
 
 GROUP=me.zhanghai.android.linenoise
-VERSION=1.0.0
-VERSION_CODE=1
+VERSION=1.0.1
+VERSION_CODE=2
 
 POM_DESCRIPTION=Linenoise for Android
-POM_URL=https://github.com/zhanghai/linenoise-android
+POM_INCEPTION_YEAR=2020
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=zhanghai
 POM_DEVELOPER_NAME=Hai Zhang
-POM_DEVELOPER_EMAIL=dreaming.in.code.zh@gmail.com
+POM_DEVELOPER_URL=https://github.com/zhanghai
 POM_SCM_CONNECTION=scm:git@github.com:zhanghai/linenoise-android.git
-POM_SCM_DEVELOPER_CONNECTION=scm:git@github.com:zhanghai/linenoise-android.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:zhanghai/linenoise-android.git
 POM_SCM_URL=https://github.com/zhanghai/linenoise-android
-
-BINTRAY_USER=zhanghai
-BINTRAY_REPO=linenoise-android
-BINTRAY_ISSUE_TRACKER_URL=https://github.com/zhanghai/linenoise-android/issues
-BINTRAY_VCS_URL=https://github.com/zhanghai/linenoise-android
-BINTRAY_GITHUB_REPO=zhanghai/linenoise-android
-BINTRAY_LICENSE=Apache-2.0
+POM_URL=https://github.com/zhanghai/linenoise-android
