--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ android.enableJetifier=true
 android.useAndroidX=true
 
 GROUP=me.zhanghai.android.linenoise
-VERSION=1.0.1
+VERSION_NAME=1.0.1
 VERSION_CODE=2
 
 POM_DESCRIPTION=Linenoise for Android
